fix: change layout colors to match theme in dark mode, change routes on dashboard component

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -79,9 +79,9 @@ picture {
 }
 
 .menu-icon,
-.arrow-drop-down-icon {
+.more-vert-icon {
     cursor: pointer;
-    color: var(--mat-sys-on-surface)
+    color: black;
 }
 
 .material-symbols-outlined {
